# GravityDesktop2

./: .gitignore  .gitmodules  CMakeLists.txt  CREDIT  LICENSE  README.md  main.cpp
docs/: memo.md
examples/: debug.cpp  debug2.cpp  desktop_capture.cpp  desktop_hack.cpp  introduction.cpp  physics.cpp  physics_icon.cpp
iOS-ClientApp/: README.md  configure.sh  project.yml
iOS-ClientApp/gRPC-Client/: ContentView.swift  Imu.swift  Info.plist  gRPC-ClientApp.swift  imu.grpc.swift  imu.pb.swift
include/: Game.h  capture.h  component.h  dx_window.h  dx_windows.h  fake_desktop.h  graph.h  math_utils.h  mouse.h  pch.h  root_component.h  types.h  window.h
include/components/: component.h  dx_window.h  dx_windows.h  graph.h  keyboard.h  mouse.h  root_component.h
include/desktop/: capture.h  fake_desktop.h  icons.h  physics_icons.h
include/physics/: world.h
include/utils/: pch.h  types.h
lib/hook/: CMakeLists.txt  hook.cpp  hook.def  hook.h
protos/: imu.proto
src/: Game.cpp  dx_window.cpp  dx_windows.cpp  graph.cpp  mouse.cpp  root_component.cpp  window.cpp  windows.cpp
src/components/: dx_window.cpp  dx_windows.cpp  graph.cpp  keyboard.cpp  mouse.cpp  root_component.cpp
src/physics/: world.cpp
src/utils/: pch.cpp
